--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
   <h1>Palindrom</h1>
   <p id="pal-out"></p>
 
+  <hr>
+
+  <h1>EvenOdd</h1>
+  <p id="evenodd-out"></p>
+
 
   <script src="js/ScriptPal.js"></script>
+  <script src="js/evenOdd.js"></script>
 </body>
 </html>
